tests/invalid/type/proto_const_field_reassign.pts
prototype P {
    const int year = 2026;
}

function main() : void {
    P p = P.clone();
    p.year = 2027;
}
